Fixes #29383 with a bit of word-wrap CSS. reviewed by jpeacock.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@51916 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
+++ b/Products/ZenUI3/browser/resources/sass/xtheme-zenoss.scss
@@ -181,3 +181,13 @@ $include-missing-images: true;
          color:#222 !important;
     }
 }
+.tabletitlecontainer{
+    padding-top:5px;
+}
+#evdetail_props_table td{
+    white-space: pre-wrap; 
+    white-space: -moz-pre-wrap !important;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;  
+}
